--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - "8085:80"          
     volumes:
       - .:/var/www/html  
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf 
+      - ./nginx.conf:/etc/nginx/conf.d/app.conf
     depends_on:
       - php
     networks:
