--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -6,7 +6,7 @@ server {
     index index.php index.html;
 
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
@@ -14,5 +14,9 @@ server {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
