--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,10 @@ version: '3.8'
 
 services:
   nginx:
-    image: nginx:latest
+    image: nginx:alpine
     container_name: nginx_server
+    ports:
+      - "80:80"
     volumes:
       - ./code:/var/www/html
       - ./nginx:/etc/nginx/conf.d
@@ -11,20 +13,16 @@ services:
       - php
     networks:
       - app-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 5s
+    restart: always
 
   php:
-    image: php:8.2-fpm
+    image: php:8.2-fpm-alpine
     container_name: php_fpm
     volumes:
       - ./code:/var/www/html
     networks:
       - app-network
+    restart: always
 
 networks:
   app-network:
