--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -11,7 +11,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass php_fpm:9000;   # لاحظ هنا 👈 اسم السيرفس نفسه من compose
+        fastcgi_pass php_fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
@@ -19,7 +19,4 @@ server {
     location ~ /\.ht {
         deny all;
     }
-
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
 }
