--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,21 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  nginx:
-    image: nginx:alpine
-    container_name: nginx_server
+  app:
+    image: php:8.2-fpm
+    container_name: php-fpm
+    volumes:
+      - ./:/var/www/html
+    restart: always
+
+  web:
+    image: nginx:latest
+    container_name: nginx
+    depends_on:
+      - app
     ports:
       - "80:80"
     volumes:
-      - ./code:/var/www/html
-      - ./nginx:/etc/nginx/conf.d
-    depends_on:
-      - php
-    networks:
-      - app-network
+      - ./:/var/www/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     restart: always
-
-  php:
-    image: php:8.2-fpm-alpine
-    container_name: php_fpm
-    volumes:
-      - ./code:/var/www/html
-    networks:
-      - app-network
-    restart: always
-
-networks:
-  app-network:
-    driver: bridge
