--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,5 +17,5 @@ services:
       - "8085:80"
     volumes:
       - ./:/var/www/html
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     restart: always
