--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,19 @@
-version: "3.8"
+version: "3.9"
 
 services:
-  app:
-    image: php:8.2-fpm
-    container_name: php-fpm
-    volumes:
-      - ./:/var/www/html
+  php:
+    image: php:8.3-fpm
     restart: always
+    volumes:
+      - ./src:/var/www/html
 
-  web:
+  nginx:
     image: nginx:latest
-    container_name: nginx
-    depends_on:
-      - app
-    ports:
-      - "8085:80"
-    volumes:
-      - ./:/var/www/html
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     restart: always
+    depends_on:
+      - php
+    volumes:
+      - ./src:/var/www/html
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    expose:
+      - "80"
