--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,21 @@
-version: "3.9"
+version: "3.8"
 
 services:
-  php:
-    image: php:8.3-fpm
-    restart: always
+  app:
+    image: php:8.2-fpm
+    container_name: php-fpm
     volumes:
-      - ./src:/var/www/html
+      - ./:/var/www/html
+    restart: always
 
-  nginx:
+  web:
     image: nginx:latest
-    restart: always
+    container_name: nginx
     depends_on:
-      - php
+      - app
+    ports:
+      - "80:80"
     volumes:
-      - ./src:/var/www/html
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    expose:
-      - "80"
+      - ./:/var/www/html
+      - ./nginx:/etc/nginx/conf.d
+    restart: always
